--- a/nn-test.ipynb
+++ b/nn-test.ipynb
@@ -286,8 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ReLu hidden layer\n",
-    "Doesn't seem to learn at all"
+    "## ReLu hidden layer"
    ]
   },
   {
